rename of project reference

--- a/Futils.Strings.Tests/Futils.Strings.Tests.csproj
+++ b/Futils.Strings.Tests/Futils.Strings.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Futils.Strings.src.csproj" />
+    <ProjectReference Include="..\Futils.Strings.src\Futils.Strings.src.csproj" />
   </ItemGroup>
 
 </Project>
