--- a/Futils.Strings.src/Futils.Strings.src.csproj
+++ b/Futils.Strings.src/Futils.Strings.src.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageId>FUtils.Strings</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Filipe Encarnacao</Authors>
+    <PackageTags>.NET;Strings</PackageTags>
+    <Description>Helper library to format strings and increase your development speed</Description>
   </PropertyGroup>
-
+  
 </Project>
